# cses-problems-2025

./: .gitignore  .typos.toml  Cargo.toml  Justfile  README.md  lefthook.yml  rust-toolchain.toml
.config/: nextest.toml
crates/intro/: Cargo.toml
crates/intro/benches/: binomial_coefficients.rs
crates/intro/src/: bin
intro/: 001-weird-algorithm.rs  002-missing-number.rs  003-repetitions.rs  004-increasing-array.rs  005-permutations.rs  006-number-spiral.rs  007-two-knights.rs  008-two-sets.rs  009-bit-strings.py  009-bit-strings.rs  010-trailing-zeroes.rs  011-coin-piles.rs  012-palindrome-reorder.rs  013-gray-code.rs  014-tower-hanoi.rs  015-creating-strings.rs  016-apple-division.rs  017-chessboard-and-queens.rs  018-raab-game-1.rs  019-mex-grid-construction.rs
misc/snippets/: import_zipfile_tests.py
