[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Techcable <git@techcable.net>"]
# What CSES supports - https://cses.fi/howto/
rust-version = "1.75"
publish = false

[workspace.dependencies]
# What CSES supports - https://cses.fi/howto/
rand = "=0.8.4"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

## aggressively lint casts ##
# in an ideal world, overflowing casts would panic
# linting them (with deny) is the second best option
cast-possible-truncation = "deny"
cast-possible-wrap = "deny"
cast-precision-loss = "deny"
cast-sign-loss = "deny"
char-lit-as-u8 = "deny"
cast-ptr-alignment = "deny"
fn-to-numeric-cast = "deny"
fn-to-numeric-cast-any = "deny"
fn-to-numeric-cast-with-truncation = "deny"
cast-lossless = "allow" # lossless casts are fine, lints will catch if types change
ptr_as_ptr = "allow" # pointer casts are fine as long as they don't violate another rule
