[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Techcable <git@techcable.net>"]
# What CSES supports - https://cses.fi/howto/
rust-version = "1.75"
publish = false

[workspace.dependencies]
# What CSES supports - https://cses.fi/howto/
rand = "=0.8.4"

# Useful for testing
itertools = "0.14"
proptest = "1"

[profile.dev]
# Increases performance with 007-two-knights(n=5000) from ~10s to ~3s
# Using opt-level=2 takes ~600ms and opt-level=3 takes ~300ms
opt-level = 1

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

## aggressively lint casts ##
# in an ideal world, overflowing casts would panic
# linting them (with deny) is the second best option
cast-possible-truncation = "deny"
cast-possible-wrap = "deny"
cast-precision-loss = "deny"
cast-sign-loss = "deny"
char-lit-as-u8 = "deny"
cast-ptr-alignment = "deny"
fn-to-numeric-cast = "deny"
fn-to-numeric-cast-any = "deny"
fn-to-numeric-cast-with-truncation = "deny"
cast-lossless = "allow" # lossless casts are fine, lints will catch if types change
ptr_as_ptr = "allow" # pointer casts are fine as long as they don't violate another rule


#
# excessively pedantic (even for clippy::pedantic)
#
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
