[package]
name = "cses-problems-intro"
description = "The introductory CSES problems"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
itertools.workspace = true
indoc.workspace = true

[[bench]]
name = "binomial_coefficients"
harness = false
bench = false

[lints]
workspace = true
